# freebsd-kernel-module-rust

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  build.sh  hello.c  rust-toolchain.toml  x86_64-kernel-freebsd.json
.cargo/: config.toml
bsd-kernel/: Cargo.toml
bsd-kernel/src/: allocator.rs  character_device.rs  error.rs  io.rs  lib.rs  module.rs  uio.rs
kernel-sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
kernel-sys/src/: lib.rs
module-hello/: Cargo.toml
module-hello/src/: lib.rs  module.rs
