[package]
name = "bsd-rust"
version = "0.1.0"
authors = ["David Young <david.young@nccgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[lib]
crate-type = ["staticlib"]

[dependencies]
bsd-kernel = { path = "../bsd-kernel" }
lazy_static = { version = "1", features = ["spin_no_std"] }
libc = "0.2"
